# serializer version: 1
# name: test_sensors.12
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': 'https://librenms',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': <DeviceEntryType.SERVICE: 'service'>,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'librenms',
          '01KXX1E2EMMSCDQ2K4A0C7JA9T',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'LibreNMS',
      'model': None,
      'model_id': None,
      'name': 'LibreNMS',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': '26.6.1',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_sensors[sensor.librenms_database_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.librenms_database_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Database version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Database version',
    'platform': 'librenms',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'database_version',
    'unique_id': 'None_database_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.librenms_database_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LibreNMS Database version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.librenms_database_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'MariaDB 10.5.29-MariaDB-ubu2004',
  })
# ---
# name: test_sensors[sensor.librenms_netsnmp_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.librenms_netsnmp_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'NetSNMP version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NetSNMP version',
    'platform': 'librenms',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'netsnmp_version',
    'unique_id': 'None_netsnmp_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.librenms_netsnmp_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LibreNMS NetSNMP version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.librenms_netsnmp_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.9.5.2',
  })
# ---
# name: test_sensors[sensor.librenms_php_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.librenms_php_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PHP version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PHP version',
    'platform': 'librenms',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'php_version',
    'unique_id': 'None_php_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.librenms_php_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LibreNMS PHP version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.librenms_php_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8.4.21',
  })
# ---
# name: test_sensors[sensor.librenms_python_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.librenms_python_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Python version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Python version',
    'platform': 'librenms',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'python_version',
    'unique_id': 'None_python_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.librenms_python_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LibreNMS Python version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.librenms_python_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.12.13',
  })
# ---
# name: test_sensors[sensor.librenms_rrdtool_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.librenms_rrdtool_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RRDTool version',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RRDTool version',
    'platform': 'librenms',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rrdtool_version',
    'unique_id': 'None_rrdtool_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.librenms_rrdtool_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LibreNMS RRDTool version',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.librenms_rrdtool_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.9.0',
  })
# ---
# name: test_sensors[sensor.librenms_total_device_count-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.librenms_total_device_count',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total device count',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total device count',
    'platform': 'librenms',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_count',
    'unique_id': 'None_device_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.librenms_total_device_count-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LibreNMS Total device count',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.librenms_total_device_count',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
